<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authorization"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:text="@string/authorization"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_marginTop="204dp"
        android:outlineSpotShadowColor="@android:color/transparent"
        app:cardBackgroundColor="@color/grey_light"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="244dp"
            android:layout_height="50dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="28dp"
            android:outlineSpotShadowColor="@android:color/transparent"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="13dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:maxLength="15"
                android:maxLines="1"
                android:textColorHint="@color/grey"
                android:textSize="12sp">

            </EditText>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="244dp"
            android:layout_height="50dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="106dp"
            android:layout_marginEnd="28dp"
            android:outlineSpotShadowColor="@android:color/transparent"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="13dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textEmailAddress"
                android:maxLength="15"
                android:maxLines="1"
                android:textColorHint="@color/grey"
                android:textSize="12sp">

            </EditText>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="160dp"
            android:text="@string/password_hint"
            android:textColor="@color/grey"
            android:textSize="10sp">

        </TextView>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:layout_marginTop="66dp"
        android:backgroundTint="@color/orange"
        android:textSize="16sp"
        app:circularflow_defaultRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:circularflow_radiusInDP="1dp">

    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button">

    </TextView>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"

        android:text="@string/text_about_sign_up"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="120dp">

    </TextView>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/orange"
        android:textSize="16sp"
        app:circularflow_radiusInDP="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
        app:layout_constraintStart_toStartOf="@+id/sign_in_button"
        app:layout_constraintTop_toTopOf="@+id/sign_in_button"
        android:layout_marginBottom="3dp">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Error"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:layout_marginTop="10dp">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>